  * Add upstream Rev. 2840:
    - QUEUEMETRICS.txt: Add new crontab line.
    - MySQL_AST_CREATE_tables.sql,
      upgrade_2.14.sql: Update to upstrem DB version 1522.
    - vicidial.php: Added webphone_layout options.
    - admin.php: Added webphone_layout option to phones and user groups.
    - help.php: Added webphone_layout entries.
  * New extras/mysql_update/mysql-1522.sql (2017-040).

2.25.13

  [Jörg Frings-Fürst]
  * Add upstream Rev. 2820:
    - Changes at AST_agent_performance_detail.php.
  * Add upstream Rev. 2821:
    - Added system filter feature, before any other actions
      + agi-DID_route.agi,
        ASTERISK_13.txt,
        DNC-dot-COM_integration.txt,
        vicidial.php,
        AST_url_log_report.php,
        admin.php,
        help.php.
      + New www/vicidial/DNCcom_inbound_filter.php.
  * New extras/mysql_update/mysql-1519.sql (2017-034).
  * Add upstream Rev. 2822:
    - admin.php: Fix for Test Call function for Asterisk 13.
  * Add upstream Rev. 2823:
    - DNCcom_inbound_filter.php: Added in_filter_override option and cache
        searching option.
  * Add upstream Rev. 2824:
    - DNCcom_inbound_filter.php: hanged to log flags that are not used to
        filter, added in_cache_override option, added connect retry if rejected.
  * Add upstream Rev. 2825:
    - agi-VDAD_ALL_inbound.agi,
      agi-VDAD_ALL_outbound.agi,
      agi-VDAD_ALL_outboundBETA.agi: Added extension append options.
    - admin.php: Added extension_appended_cidname options and custom reports
        variable display.
    - functions.php: Added code for custom reports variable display.
    - help.php: Added new extension append cidname options and custom
       reports help.
    - vicidial_custom_reports_admin.php: Added custom variables.
  * Add upstream Rev. 2826:
    - AST_manager_listen_AMI2.pl: Commented out handle_sip_event and
        handle_cpd_event functions, not needed anymore, to be deleted later.